--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/0sergio-hash/Meal-Plan-scraping-project/blob/a884078eb119ab7ac5d113a8bdab494caad3db05/Meal%20Plan%20Project.ipynb">Meal Plan Web scraping<br />
 									in Python</a></h2>
-									<p>In this project, I wrote a Python script that will visit the wbsite I use 
+									<p>In this project, I wrote a Python script that will visit the website I use 
 										for meal planning, scrape the meals and ingredients for the current or
 										following week, write them to a formatted word document, then save
 										and email the document to a default or specified address, as well as print
